FAK-174: Rechnung per Email versenden
- added some documentation